ARM/shared-resources.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "commonSettings": {
            "type": "object",
            "metadata": {
                "Description": "Common settings object"
            }
        }
    },
    "variables": {
        "constants": {
            "apiVersions": {
                "storageAccounts": "2015-06-15",
                "networkSecurityGroups": "2015-06-15",
                "loadBalancers": "2016-03-30",
                "virtualNetworks": "2015-06-15",
                "publicIPAddresses": "2015-06-15",
                "networkInterfaces": "2015-06-15",
                "virtualMachines": "2015-06-15",
                "virtualMachineScaleSets": "2015-06-15"
            },
            "tierName": {
                "regserver": "regserver",
                "regserverdatabase": "regserverdatabase",
                "hostserver": "hostserver",
                "webportal": "webportal"
            },
            "publicIPs": {
                "regserver": "regserver",
                "hostserver": "hostserver",
                "webportal": "webportal"
            }
        },
        "tenantName": "[parameters('commonSettings').tenantName]",
        "longtermResourceGroupName": "[parameters('commonSettings').longtermResourceGroupName]",
        "repositoryUrl": "[parameters('commonSettings').repositoryUrl]",
        "vnet": {
            "name": "[concat(variables('tenantName'),'-vnet')]",
            "address": "10.0.0.0/16",
            "subnet": {
                "regserver": {
                    "name": "[concat('subnet-', variables('constants').tierName.regserver)]",
                    "nsgName": "[concat('nsg-', variables('constants').tierName.regserver)]",
                    "address": "10.0.1.0/24"
                },
                "regserverdatabase": {
                    "name": "[concat('subnet-', variables('constants').tierName.regserverdatabase)]",
                    "nsgName": "[concat('nsg-', variables('constants').tierName.regserverdatabase)]",
                    "address": "10.0.2.0/24"
                },
                "hostserver": {
                    "name": "[concat('subnet-', variables('constants').tierName.hostserver)]",
                    "nsgName": "[concat('nsg-', variables('constants').tierName.hostserver)]",
                    "address": "10.0.3.0/24"
                },
                "webportal": {
                    "name": "[concat('subnet-', variables('constants').tierName.webportal)]",
                    "nsgName": "[concat('nsg-', variables('constants').tierName.webportal)]",
                    "address": "10.0.4.0/24"
                }
            }
        }
    },
    "resources": [
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "[variables('constants').apiVersions.networkSecurityGroups]",
            "location": "[resourceGroup().location]",
            "name": "[variables('vnet').subnet.regserver.nsgName]",
            "tags": { "displayName": "NetworkSecurityGroup RegServer" },
            "properties": {
                "securityRules": [
                    {
                        "name": "regserver-http-in",
                        "properties": {
                            "priority": 100,
                            "description": "Allow TCP/80 Inbound",
                            "access": "Allow",
                            "direction": "Inbound",
                            "protocol": "Tcp",
                            "sourceAddressPrefix": "Internet",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "[variables('vnet').subnet.regserver.address]",
                            "destinationPortRange": "80"
                        }
                    },
                    {
                        "name": "regserver-https-in",
                        "properties": {
                            "priority": 101,
                            "description": "Allow TCP/443 Inbound",
                            "access": "Allow",
                            "direction": "Inbound",
                            "protocol": "Tcp",
                            "sourceAddressPrefix": "Internet",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "[variables('vnet').subnet.regserver.address]",
                            "destinationPortRange": "443"
                        }
                    },
                    {
                        "name": "regserver-to-regserverdatabase",
                        "properties": {
                            "priority": 102,
                            "description": "Allow TCP/3306 MySQL to Database",
                            "access": "Allow",
                            "direction": "Outbound",
                            "protocol": "Tcp",
                            "sourceAddressPrefix": "[variables('vnet').subnet.regserver.address]",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "[variables('vnet').subnet.regserverdatabase.address]",
                            "destinationPortRange": "3306"
                        }
                    },
                    {
                        "name": "block-everything",
                        "properties": {
                            "priority": 4096,
                            "description": "Block all inbound traffic",
                            "access": "Deny",
                            "direction": "Inbound",
                            "protocol": "*",
                            "sourceAddressPrefix": "*",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "[variables('vnet').subnet.regserver.address]",
                            "destinationPortRange": "*"
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "[variables('constants').apiVersions.networkSecurityGroups]",
            "location": "[resourceGroup().location]",
            "name": "[variables('vnet').subnet.regserverdatabase.nsgName]",
            "tags": { "displayName": "NetworkSecurityGroup RegServer Database" },
            "properties": {
                "securityRules": [
                    {
                        "name": "regserver-to-regserverdatabase",
                        "properties": {
                            "priority": 102,
                            "description": "Allow TCP/3306 MySQL to Database",
                            "access": "Allow",
                            "direction": "Inbound",
                            "protocol": "Tcp",
                            "sourceAddressPrefix": "[variables('vnet').subnet.regserver.address]",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "[variables('vnet').subnet.regserverdatabase.address]",
                            "destinationPortRange": "3306"
                        }
                    },
                    {
                        "name": "block-everything",
                        "properties": {
                            "priority": 4096,
                            "description": "Block all inbound traffic",
                            "access": "Deny",
                            "direction": "Inbound",
                            "protocol": "*",
                            "sourceAddressPrefix": "*",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "[variables('vnet').subnet.regserverdatabase.address]",
                            "destinationPortRange": "*"
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "[variables('constants').apiVersions.networkSecurityGroups]",
            "location": "[resourceGroup().location]",
            "name": "[variables('vnet').subnet.hostserver.nsgName]",
            "tags": { "displayName": "NetworkSecurityGroup HostServer" },
            "properties": {
                "securityRules": [
                    {
                        "name": "hostserver-http-in",
                        "properties": {
                            "priority": 103,
                            "description": "Allow TCP/80 Inbound",
                            "access": "Allow",
                            "direction": "Inbound",
                            "protocol": "Tcp",
                            "sourceAddressPrefix": "Internet",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "[variables('vnet').subnet.hostserver.address]",
                            "destinationPortRange": "80"
                        }
                    },
                    {
                        "name": "hostserver-https-in",
                        "properties": {
                            "priority": 104,
                            "description": "Allow TCP/443 Inbound",
                            "access": "Allow",
                            "direction": "Inbound",
                            "protocol": "Tcp",
                            "sourceAddressPrefix": "Internet",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "[variables('vnet').subnet.hostserver.address]",
                            "destinationPortRange": "443"
                        }
                    },
                    {
                        "name": "block-everything",
                        "properties": {
                            "priority": 4096,
                            "description": "Block all inbound traffic",
                            "access": "Deny",
                            "direction": "Inbound",
                            "protocol": "*",
                            "sourceAddressPrefix": "*",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "[variables('vnet').subnet.hostserver.address]",
                            "destinationPortRange": "*"
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "[variables('constants').apiVersions.networkSecurityGroups]",
            "location": "[resourceGroup().location]",
            "name": "[variables('vnet').subnet.webportal.nsgName]",
            "tags": { "displayName": "NetworkSecurityGroup PortalServer" },
            "properties": {
                "securityRules": [
                    {
                        "name": "hostserver-http-in",
                        "properties": {
                            "priority": 103,
                            "description": "Allow TCP/80 Inbound",
                            "access": "Allow",
                            "direction": "Inbound",
                            "protocol": "Tcp",
                            "sourceAddressPrefix": "Internet",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "[variables('vnet').subnet.webportal.address]",
                            "destinationPortRange": "80"
                        }
                    },
                    {
                        "name": "hostserver-https-in",
                        "properties": {
                            "priority": 104,
                            "description": "Allow TCP/443 Inbound",
                            "access": "Allow",
                            "direction": "Inbound",
                            "protocol": "Tcp",
                            "sourceAddressPrefix": "Internet",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "[variables('vnet').subnet.webportal.address]",
                            "destinationPortRange": "443"
                        }
                    },
                    {
                        "name": "block-everything",
                        "properties": {
                            "priority": 4096,
                            "description": "Block all inbound traffic",
                            "access": "Deny",
                            "direction": "Inbound",
                            "protocol": "*",
                            "sourceAddressPrefix": "*",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "[variables('vnet').subnet.webportal.address]",
                            "destinationPortRange": "*"
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "[variables('constants').apiVersions.virtualNetworks]",
            "location": "[resourceGroup().location]",
            "name": "[variables('vnet').name]",
            "tags": { "displayName": "Virtual Network" },
            "dependsOn": [
                "[concat('Microsoft.Network/networkSecurityGroups/', variables('vnet').subnet.regserver.nsgName)]",
                "[concat('Microsoft.Network/networkSecurityGroups/', variables('vnet').subnet.hostserver.nsgName)]",
                "[concat('Microsoft.Network/networkSecurityGroups/', variables('vnet').subnet.webportal.nsgName)]"
            ],
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[variables('vnet').address]"
                    ]
                },
                "subnets": [
                    {
                        "name": "[variables('vnet').subnet.regserver.name]",
                        "properties": {
                            "addressPrefix": "[variables('vnet').subnet.regserver.address]",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('vnet').subnet.regserver.nsgName)]"
                            }
                        }
                    },
                    {
                        "name": "[variables('vnet').subnet.regserverdatabase.name]",
                        "properties": {
                            "addressPrefix": "[variables('vnet').subnet.regserverdatabase.address]",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('vnet').subnet.regserverdatabase.nsgName)]"
                            }
                        }
                    },
                    {
                        "name": "[variables('vnet').subnet.hostserver.name]",
                        "properties": {
                            "addressPrefix": "[variables('vnet').subnet.hostserver.address]",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('vnet').subnet.hostserver.nsgName)]"
                            }
                        }
                    },
                    {
                        "name": "[variables('vnet').subnet.webportal.name]",
                        "properties": {
                            "addressPrefix": "[variables('vnet').subnet.webportal.address]",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('vnet').subnet.webportal.nsgName)]"
                            }
                        }
                    }
                ]
            }
        }
    ]
}
